<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".SecondActivity">

        <TextView
            android:id="@+id/tvBlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/blink_effect"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnBlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="20dp"
            android:text="@string/blink_text"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnNextCardActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="20dp"
            android:text="@string/card_animation"
            tools:ignore="VisualLintButtonSize" />


  <!--      <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardBackground="@drawable/rotate_border"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true" />-->
    </LinearLayout>
</layout>